--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Favoris</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Login</h1>
-<p th:text="${test}"></p>
+
+<div class="container">
+    <img src="img/logo.png" width="200px" height="50px">
+</div>
+<p th:text="${test}">nothing</p>
+<div class="container">
+    <form  method="post" th:action="@{/login}">
+        <div class="form-group">
+            <label for="examplePhoneNumber">Phone number</label>
+            <input type="text" class="form-control" id="examplePhoneNumber" name="username">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+        </div>
+        <button type="submit" class="btn btn-primary" value="submit">Submit</button>
+        <a th:href="@{/registration}" class="btn btn-primary">Registration</a>
+    </form>
+</div>
+<div class="alert alert-danger" role="alert" th:if="false">
+    This is a danger alert—check it out!
+</div>
 </body>
 </html>
