--- a/src/main/resources/templates/fragments/fragHeaders.html
+++ b/src/main/resources/templates/fragments/fragHeaders.html
@@ -1,4 +1,5 @@
-<th:block xmlns:th="http://www.thymeleaf.org" th:fragment="adminHeader">
+<th:block xmlns="http://www.w3.org/1999/xhtml"
+          xmlns:th="http://www.w3.org/1999/xhtml" th:fragment="adminHeader">
        <section class="container-fluid p-0">
         <div class="d-flex flex-column">
             <div>
@@ -16,17 +17,15 @@
                                         Users
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">All user</a>
-                                        <a class="dropdown-item" href="#">Add user</a>
-                                        <a class="dropdown-item" href="#">Delete user</a>
-                                        <a class="dropdown-item" href="#">Change user ifno</a>
+                                        <a class="dropdown-item" th:href="@{/admin/allUsers}">All user</a>
+                                        <a class="dropdown-item" th:href="@{/admin/addUser}">Add user</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Textile <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Furniture</a>
+                                    <a class="nav-link" th:href="@{/admin/allFurnitureTypes}">Furniture</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Provider</a>
