--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,13 +19,27 @@
 <div th:replace="~{fragments/fragHeaders :: adminHeader}"></div>
 
 
-<p th:text="${test}">nothing</p>
-ala;lma;
-<div sec:authentication="authorities">
-    The value of the "name" property of the authentication object should appear here.
-</div>
-<p sec:authorize="hasRole('ADMIN')">
-    <a th:href="@{/adminPage}" class="btn btn-primary"></a>
-</p>
+
+<!--<div sec:authentication="authorities">-->
+    <!--The value of the "name" property of the authentication object should appear here.-->
+<!--</div>-->
+<!--<p sec:authorize="hasRole('ADMIN')">-->
+    <!--<a th:href="@{/admin/adminPage}" class="btn btn-primary"></a>-->
+<!--</p>-->
+
+<div class="container-fluid">
+    <div class="row m-3">
+        <div class="col-md-12 col-lg-4"  th:each="ft : ${furnitureTypes}">
+            <div class="card  mr-3 mb-4" style="width: 100%;">
+                <img th:src="@{${ft.photoPath}}" class="card-img-top" alt="Example" width="100%" height="200px">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${ft.nameOfType}">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
