--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Favoris</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -38,7 +39,7 @@
 
 <div class="container">
     <div class="row justify-content-center align-items-center" style="height:100vh">
-        <div class="col-md-12 col-lg-8 ">
+        <div class="col-12">
             <div class="card">
 
                 <div class="card-body">
@@ -50,7 +51,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control" name="password">
                         </div>
-                        <button type="submit" id="sendlogin" class="btn btn-primary">login</button>
+                        <button type="submit" id="sendlogin" class="btn btn-primary">Login</button>
                     </form>
                 </div>
             </div>
