Add login, begin admin page

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -24,5 +24,8 @@
 <div th:if="${fragmentPathFurnitureType!=null}">
     <div th:replace="~{fragments/fragForFurnitureType :: ${fragmentPathFurnitureType}}"></div>
 </div>
+<div th:if="${fragmentPathTextile!=null}">
+    <div th:replace="~{fragments/fragForTextile :: ${fragmentPathTextile}}"></div>
+</div>
 </body>
 </html>
