--- a/src/main/resources/templates/fragments/fragHeaders.html
+++ b/src/main/resources/templates/fragments/fragHeaders.html
@@ -10,7 +10,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse " id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -22,13 +22,13 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Textile <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" th:href="@{/admin/allTextile}">Textile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" th:href="@{/admin/allFurnitureTypes}">Furniture</a>
+                                    <a class="nav-link" th:href="@{/admin/allFurnitureTypes}">FurnitureTypes</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Provider</a>
+                                    <a class="nav-link" th:href="@{/admin/allFurnitures}">Furnitures</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Statistic</a>
